# prototype

./: CMakeLists.txt  nestest_ref.txt  output2.txt
src/: Bus.cpp  Bus.h  CPU.cpp  CPU.h  main.cpp
